# boost-python

./: .gitignore  CMakeLists.txt  module.cmake
doc/v2/: reference.html  reference_existing_object.html  return_pointee_value.html
include/boost/: python.hpp
include/boost/python/: arg_from_python.hpp  cast.hpp  class.hpp  data_members.hpp  def.hpp  default_call_policies.hpp  extract.hpp  handle.hpp  init.hpp  list.hpp  make_constructor.hpp  make_function.hpp  object_core.hpp  pure_virtual.hpp  return_arg.hpp  return_pointee_value.hpp  signature.hpp  stl_iterator.hpp  to_python_indirect.hpp  type_id.hpp  with_custodian_and_ward.hpp
include/boost/python/converter/: arg_from_python.hpp  implicit.hpp  obj_mgr_arg_from_python.hpp  overload_score.hpp  registrations.hpp  rvalue_from_python_data.hpp  shared_ptr_from_python.hpp  shared_ptr_to_python.hpp
include/boost/python/detail/: caller.hpp  defaults_def.hpp  destroy.hpp  enable_if.hpp  limits.hpp  logging.hpp  make_keyword_range_fn.hpp  name_of.hpp  nullary_function_adaptor.hpp  prefix.hpp  preprocessor.hpp  referent_storage.hpp  signature.hpp  value_arg.hpp  wrapper_base.hpp
include/boost/python/object/: class_metadata.hpp  function.hpp  function_handle.hpp  iterator.hpp  make_instance.hpp  pointer_holder.hpp  py_function.hpp  stl_iterator_core.hpp  value_holder.hpp
include/boost/python/suite/indexing/: container_utils.hpp
src/: CMakeLists.txt  list.cpp  logging.cpp  module.cpp  object_protocol.cpp  wrapper.cpp
src/converter/: builtin_converters.cpp  from_python.cpp  registry.cpp  type_id.cpp
src/object/: class.cpp  enum.cpp  function.cpp  function_doc_signature.cpp  stl_iterator.cpp
test/: CMakeLists.txt  ambig1.cpp  ambig1.py  ambig2.cpp  ambig2.py  ambig3.cpp  ambig3.py  ambig4.cpp  ambig4.py  ambig5.cpp  ambig5.py  ambig6.cpp  ambig6.py  andreas_beyer.cpp  andreas_beyer.py  are_base_and_derived.cpp  args.py  auto_ptr.py  back_reference.py  ben_scott1.py  bienstman1.cpp  bienstman1.py  bienstman2.py  bienstman3.py  bienstman4.py  bienstman5.py  bind.cpp  bind.py  bpl_doctest.py  bpl_test.hpp  bpl_testdriver.py  builtin_converters.py  callbacks.py  cltree.cpp  cltree.py  const_argument.py  converter_collisions1.cpp  converter_collisions2.cpp  crossmod_exception.py  crossmod_opaque.py  (+116 more)
test/CompileTest/: CMakeLists.txt
